# make-progress

./: Cargo.toml
crates/entity/: Cargo.toml
crates/entity/src/: error.rs  lib.rs
crates/entity/src/plan/: db.rs  dto.rs  mod.rs  model.rs
crates/entity/src/project/: db.rs  dto.rs  mod.rs  model.rs
crates/entity/src/task/: db.rs  dto.rs  mod.rs  model.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_project.rs  m20231207_080612_create_plan.rs  m20231212_072946_create_task.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  project.rs
crates/storage/src/plan/: dto.rs  mod.rs
crates/storage/src/project/: dto.rs  mod.rs
crates/storage/src/task/: dto.rs  mod.rs
src/: config.rs  consts.rs  error.rs  lib.rs
src/service/: mod.rs  project.rs
src/service/plan/: dto.rs  mod.rs
src/service/project/: dto.rs  mod.rs
src/service/task/: dto.rs  mod.rs
ui/tauri/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/tauri/internal/: common.ts  index.ts
ui/tauri/internal/plugins/: html.ts  index.ts
ui/tauri/internal/utils/: env.ts
ui/tauri/public/iconfont/: iconfont.js
ui/tauri/src/: App.tsx
ui/tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui/tauri/src-tauri/src/: error.rs  main.rs
ui/tauri/src/hooks/: page.ts
ui/tauri/src/layout/: index.less  layout.tsx
ui/tauri/src/router/: consts.ts  index.tsx
ui/tauri/src/settings/: project_setting.ts
ui/tauri/src/store/: index.ts  project_setting.ts
ui/tauri/src/utils/: date_format.ts  (+1 more)
(+49 files in other folders)
