[package]
name = "make-progress-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "./crates/*"]

[dependencies]
rc-storage = { path = "./crates/storage" }
migration = { path = "./crates/migration" }

thiserror = { version = "1.0" }
serde = { version = "1.0" }
directories = "5.0"

tokio = { version = "1.34", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3" }
