[package]
name = "rc-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [
    "runtime-actix-native-tls",
    "sqlx-sqlite",
] }
thiserror = { version = "1.0" }
serde = { version = "1.0" }
